# doc/swagger/imchat.swagger.json
@@ -21,37 +21,6 @@
   ],
   "paths": {
     "/v1/user": {
-      "delete": {
-        "summary": "Delete user",
-        "description": "Use this API to update user",
-        "operationId": "User_DeleteUser",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/pbDeleteUserResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "int64"
-          }
-        ],
-        "tags": [
-          "User"
-        ]
-      },
       "post": {
         "summary": "Create new user",
         "description": "Use this API to create a new user",
@@ -144,6 +113,39 @@
             "schema": {
               "$ref": "#/definitions/pbLoginUserRequest"
             }
+          }
+        ],
+        "tags": [
+          "User"
+        ]
+      }
+    },
+    "/v1/user/{id}": {
+      "delete": {
+        "summary": "Delete user",
+        "description": "Use this API to update user",
+        "operationId": "User_DeleteUser",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbDeleteUserResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "int64"
           }
         ],
         "tags": [
